--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "keycloak-js": "^13.0.1",
     "vue": "^2.6.11",
-    "vue-router": "^3.2.0"
+    "vue-router": "^3.2.0",
+    "vuejs-logger": "^1.5.5"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
